<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#4285F4"
                android:textStyle="bold"
                android:maxLength="16" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#34A853"
                android:textStyle="bold"
                android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_bio"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#FBBC05"
                android:textStyle="bold"
                android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_expertise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtExpertise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_expertise"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:backgroundTint="#EA4335"
                android:textStyle="bold"
                android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:background="#009688"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>